# SlackVectorX

./: .gitignore  build-dev-image.sh
.github/workflows/: main.yaml
slackvectorx/: Dockerfile  chatbot.pkl  config.example.json  config.json  config.py  data_backend.py  docker-compose.yaml  gpt.py  healthcheck.py  pyproject.toml  slack.py
slackvectorx/backends/: pickledb.py
